--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,19 +22,54 @@ body {
 .gallery {
   display: flex;
   flex-wrap: wrap;
+  margin-top: 62px;
+  margin-right: -20px;
+  margin-bottom: -20px;
+
 }
 
 .photo-card {
-  width: 320px;
-  height: auto;
+  width: 350px;
+  height: 350px;
   margin-right: 10px;
   margin-bottom: 10px;
+  flex-direction: column;
 }
+
 .photo-img {
   width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+.info {
+  display: flex;
+}
+.gallery-link {
+  width: 350px;
+    height: 350px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    flex-direction: column;
+  text-decoration: none;
+  border-radius: 4px;
+  
+}
+.info-item {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: baseline; 
+  justify-content: space-around;
+  color: #000;
+
+  
 }
 
 .header {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   display: block;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -42,13 +77,32 @@ body {
   background-color: #a900ff;
 }
 .search-form input {
-  border-radius: 4px;
+  padding-left: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 5px;
   font-weight: 500;
-    font-size: 16px;
-    line-height: 1.63;
-    letter-spacing: 0.06em;}
+  font-size: 16px;
+  line-height: 1.63;
+  letter-spacing: 0.06em;
+}
+.right-btn {
+  width: 40px;
+  height: 40px;
+  border-radius: 5px;
+  padding: 5px;
+  align-items: baseline;
+  margin-left: 3px;
+}
 
+.search-form {
+  display: flex;
+  justify-content: center;
+ 
+
+}
 button {
+  height: 100%;
   border-radius: 4px;
   font-weight: 500;
   font-size: 16px;
@@ -56,12 +110,30 @@ button {
   letter-spacing: 0.06em;
 }
 .load-more {
-  display: none;
+ display: block;
   margin-left: auto;
   margin-right: auto;
   
 }
-.is-visible {
-  display: block;
+.is-hidden {
+  display: none;
   
+}
+.up-btn {
+  
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  width: 40px;
+  height: 40px;
+  border-radius: 5px;
+  padding: 5px;
+  opacity: 0.33;
+
+  transition-property: opacity;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.up-btn:hover {
+  opacity: 0.8;
 }
